# Perseus

./: .dockerignore  Dockerfile  NOTICE  README.md  env.yml  environment.cpu.yml  perseus_cpu_env.yml  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
conda-recipe/: meta.yaml
deprecated/: README.md
deprecated/losses/: lineage_aware_focal.py
deprecated/models/: restcn.py
dev/: README.md  evaluate.py  extract_train_data.py
scripts/: calibrate_heads.py  compare_outputs.py
scripts/logs/: calib_heads.14325352.err  calib_heads.14325352.out
src/perseus/: cli.py  extract.py  extract_train_data.py  filter.py  train.py
src/perseus/commands/: extract.py  filter.py  setup.py  train.py
src/perseus/data/: collate.py  dataset.py  evaluate.py  sampler.py
src/perseus/features/: features.py  init.py  processing.py
src/perseus/losses/: bce.py  compute.py  focal.py
src/perseus/models/: cnn.py  initialize.py  layers.py  trained_weights.pt
src/perseus/trainer/: calibration.py  evaluate.py  metrics.py  regularization.py  train.py  utils.py
src/perseus/utils/: constants.py  filter_utils.py  globals.py  io_utils.py  targets.py  tax_utils.py
src/taxoncnn/: evaluate.py  extract.py  filter.py  train.py
src/taxoncnn/data/: collate.py  dataset.py  sampler.py
src/taxoncnn/features/: features.py  init.py  io_utils.py  processing.py  tax_utils.py
src/taxoncnn/losses/: compute.py  focal.py
src/taxoncnn/models/: cnn.py  initialize.py  restcn.py
src/taxoncnn/trainer/: calibration.py  evaluate.py  metrics.py  regularization.py  train.py  (+1 more)
tests/: conftest.py
tests/data/: test_collate.py  test_dataset.py  test_sampler.py
tests/extract/: test_extract_pipeline.py  test_pipeline_small.py  test_taxonomy.py  test_utils.py  test_writers.py
tests/features/: test_features.py  test_init.py  test_processing.py
tests/losses/: test_compute.py  test_focal.py
tests/models/: test_cnn.py  test_initialize.py  test_layers.py  test_restcn.py
tests/pipelines/: test_extract_pipeline.py  test_filter_pipeline.py  test_perseus_pipeline.py
tests/test_data/: filtered.txt  test_kraken.txt  test_shards.canonical_map.pkl  test_shards.lineage_map.pkl  test_shards.tax_context.pkl
tests/trainer/: test_evaluate.py  test_metrics.py  test_train.py  test_utils.py
tests/utils/: test_features.py  test_filter_utils.py  test_io_utils.py  test_processing.py  test_tax_utils.py
tests/utils.py/: test_io_utils.py  test_processing.py  test_taxonomy.py
(+10 files in other folders)
