[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perseus"
version = "1.0.1"
description = "Lineage-aware Kraken2 refinement for long-read metagenomics "
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Matthew Nguyen" }
]

dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn",
  "ete3",
  "pyarrow",
  "alive-progress",
  "legacy-cgi",
]

[project.scripts]
perseus = "perseus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perseus = ["models/*.pt"]

[tool.pytest.ini_options]
markers = [
    "pipeline: slower end-to-end pipeline tests"
]